feat: fix the CandidateRepository