@@ -2,37 +2,39 @@ package nl.hva.election_backend.repository;
 
 import jakarta.annotation.PostConstruct;
 import nl.hva.election_backend.model.Candidate;
+import nl.hva.election_backend.model.Election;
 import nl.hva.election_backend.model.Party;
-import nl.hva.election_backend.utils.xml.DutchCandidateParser;
+import nl.hva.election_backend.utils.xml.transformers.ResultLoader;
 import org.springframework.stereotype.Repository;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Repository
 public class CandidateRepository {
 
-    // Het uitlezen van de XML met kandidaten
-    private final DutchCandidateParser candidateParser;
+    // Lijsten om alle kandidaten en partijen opslaan
+    private final List<Candidate> candidates = new ArrayList<>();
+    private final List<Party> parties = new ArrayList<>();
 
-    // Het opslaan van kandidaten op in een lijst
-    private List<Candidate> candidates = new ArrayList<>();
-
-    // De parser wordt via dependency injection binnengehaald door Spring
-    public CandidateRepository(DutchCandidateParser candidateParser) {
-        this.candidateParser = candidateParser;
-    }
-
-    // Hier worden de kandidaten uit het XML-bestand ingeladen
     @PostConstruct
     public void init() {
-        List<Party> parties = new ArrayList<>();
-        candidates = candidateParser.parseCandidates(
-                "TK2023_HvA_UvA/Kandidatenlijsten_TK2023_Amsterdam.eml.xml",
-                parties
-        );
-        System.out.println("✅ Loaded " + candidates.size() + " candidates from XML file");
+        try {
+            Election election = new Election("Tweede Kamerverkiezingen 2023");
+
+            ResultRepository repository = new ResultRepository();
+
+            // Laad verkiezingsresultaten van XML
+            ResultLoader.loadResults(election, repository);
+
+            // Toevoegen geladen kandidaten/partijen toe aan lijsten
+            candidates.addAll(election.getCandidates());
+            parties.addAll(election.getParties());
+
+            System.out.println("✅ Parsed " + candidates.size() + " kandidaten en " + parties.size() + " partijen");
+        } catch (Exception e) {
+            System.err.println("❌ Fout bij inladen kandidaten: " + e.getMessage());
+        }
     }
 
     // Geeft alle kandidaten terug
@@ -40,10 +42,15 @@ public class CandidateRepository {
         return candidates;
     }
 
-    // Zoeken van kandidaten via partij-ID
+    // Geeft alle kandidaten van een specifieke partij terug
     public List<Candidate> findByPartyId(String partyId) {
         return candidates.stream()
-                .filter(c -> c.getPartyId() != null && c.getPartyId().equalsIgnoreCase(partyId))
-                .collect(Collectors.toList());
+                .filter(c -> c.getPartyId().equals(partyId))
+                .toList();
+    }
+
+    // Geeft alle partijen terug
+    public List<Party> findAllParties() {
+        return parties;
     }
 }
